deploy/gke/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cbustosg-usuarios-service-srv
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8081
  selector:
    app: cbustosg-usuarios-service
  type: ClusterIP
